# tempo

./: .gitignore  LICENSE  README.md  install.cmd  install.ps1  install.sh  pyproject.toml  rewrite_history.sh  tempo.spec
.github/workflows/: release.yml  test.yml
design/: landing-page-spec.md
examples/: sequence.yaml  single-task.md
scripts/: test_build.sh
tempo/: __init__.py  __main__.py  cli.py  config.py  parser.py  runner.py  scheduler.py  session.py  transcript.py
website/: next.config.js  package-lock.json  package.json  tailwind.config.js
website/app/: globals.css  layout.tsx  page.tsx
website/app/api/admin/stats/: route.ts
website/app/api/downloads/: route.ts
website/app/api/downloads/set/: route.ts
website/app/api/downloads/track/: route.ts
website/app/api/health/: route.ts
website/app/components/: Features.tsx  Footer.tsx  HeroClient.tsx
website/lib/: redis.ts
